# oven-compiler

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
examples/: binary_op.mlir  binary_op.py  binary_op_llvm.ll  binary_op_llvm.mlir  binary_op_llvm.ptx  math_op.mlir  math_op.py  math_op_llvm.ll  math_op_llvm.mlir  math_op_llvm.ptx  matmul.mlir  matmul_llvm.ll  matmul_llvm.mlir  matmul_llvm.ptx  unary_op.mlir  unary_op.py  unary_op_llvm.ll  unary_op_llvm.mlir  unary_op_llvm.ptx
lib/Conversion/: CMakeLists.txt
lib/Conversion/AddNVVMKernel/: AddNVVMKernel.cpp  AddNVVMKernel.h  AddNVVMKernel.td  CMakeLists.txt
lib/Conversion/OvenToLLVM/: CMakeLists.txt  OvenToLLVM.cpp  OvenToLLVM.h  OvenToLLVM.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/Oven/IR/: CMakeLists.txt  OvenDialect.cpp  OvenDialect.h  OvenDialect.td  OvenOps.h  OvenOps.td
lib/Dialect/Oven/Transform/: CMakeLists.txt  OptimizeOven.cpp  OptimizeOven.h  Passes.h  Passes.td
oven_compiler/: CMakeLists.txt  __init__.py  cli.py  oven.py  python_to_ptx.py
oven_mlir/: __init__.py  cli.py  oven.py  oven_opt_bindings.cpp  python_to_ptx.py
scripts/: README.md  build.sh  build_complete.sh  build_wheel.sh  check_package.py  ci.sh  clean.sh  compile.sh  dev_tools.sh  install_mlir.sh  quick_build.sh  run_kernel.py  run_matmul.py  run_test.sh  run_tests.sh  setup.sh  setup_venv.sh
tests/: matmul.mlir  matmul_block.mlir  oven.mlir  reduce_sum_axis1.mlir  sigmoid.mlir  smem.mlir  smem_llvm.mlir  vectorize.mlir  vectorize_op.mlir
tests/python/: test_oven_bindings.py
tools/: CMakeLists.txt  oven-opt.cpp
