[build-system]
requires = [
    "setuptools>=64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["oven_mlir*"]

[tool.setuptools.package-data]
oven_mlir = [
    "*.so",
    "*.pyd", 
    "*.dll",
    "*.dylib"
]

[project]
name = "oven-mlir"
version = "0.1.1"
description = "Python-to-PTX GPU Kernel Compiler with MLIR optimization"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Sinjin Jeong", email = "sjjeong94@gmail.com"}
]
maintainers = [
    {name = "Oven MLIR Team", email = "oven-mlir@example.com"}
]
keywords = [
    "mlir",
    "gpu", 
    "cuda",
    "compiler",
    "optimization",
    "kernel",
    "ptx",
    "python",
    "llvm",
    "nvptx"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence", 
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Symmetric Multi-processing"
]
dependencies = [
    "numpy>=1.20.0",
    "oven-compiler>=0.1.1"
]

[project.optional-dependencies]
python-compilation = [
    # oven-compiler is now a core dependency
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black>=22.0", 
    "isort>=5.10",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=2.15"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.17"
]
test = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "pytest-xdist>=2.0"
]
build = [
    "build>=0.8",
    "twine>=4.0",
    "wheel>=0.37"
]

[project.urls]
Homepage = "https://github.com/sjjeong94/oven"
Documentation = "https://github.com/sjjeong94/oven#readme"
Repository = "https://github.com/sjjeong94/oven.git"
"Bug Tracker" = "https://github.com/sjjeong94/oven/issues"
"Source Code" = "https://github.com/sjjeong94/oven"
"Download" = "https://pypi.org/project/oven-mlir/"

[project.scripts]
oven-mlir = "oven_mlir.cli:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | llvm-project
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "llvm-project/",
    "build/",
    "dist/"
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v", 
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]